--- a/projeto_aspnetcore.csproj
+++ b/projeto_aspnetcore.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.0-preview.5" />
+  </ItemGroup>
+
 </Project>
