Sistema totalmente funcional com a conexão em Mysql

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=108.179.192.83;port3306;database=brilh291_projetonetcore;uid=brilh291_netcore;password=c@120699"
+    "DefaultConnection": "server=108.179.192.83;port=3306;database=brilh291_projetonetcore;uid=brilh291_netcore;password=c@120699"
   },
   "Logging": {
     "LogLevel": {
