--- a/projeto_aspnetcore.csproj
+++ b/projeto_aspnetcore.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
+    
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.0-preview.5" />
   </ItemGroup>
 
